[gd_scene load_steps=4 format=3 uid="uid://yu8wmoekdpwq"]

[ext_resource type="Script" path="res://main.gd" id="1_aij80"]
[ext_resource type="PackedScene" uid="uid://cbqmgudttkowy" path="res://player.tscn" id="1_fdlih"]
[ext_resource type="Theme" uid="uid://dblq3aeoywv06" path="res://new_theme.tres" id="3_f5s8r"]

[node name="MultiplayerTest" type="Node2D"]
script = ExtResource("1_aij80")
player_scene = ExtResource("1_fdlih")

[node name="MultiplayerSpawner" type="MultiplayerSpawner" parent="."]
_spawnable_scenes = PackedStringArray("res://player.tscn")
spawn_path = NodePath("..")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 1152.0
offset_bottom = 648.0
grow_horizontal = 2
grow_vertical = 2

[node name="ButtonContainer" type="VBoxContainer" parent="Control"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 51.0
offset_top = 123.0
offset_right = 618.0
offset_bottom = 419.0

[node name="HostButton" type="Button" parent="Control/ButtonContainer"]
layout_mode = 2
theme = ExtResource("3_f5s8r")
text = "HOST GAME"

[node name="JoinButton" type="Button" parent="Control/ButtonContainer"]
layout_mode = 2
theme = ExtResource("3_f5s8r")
text = "JOIN GAME"

[node name="JoinButtonLocal" type="Button" parent="Control/ButtonContainer"]
layout_mode = 2
theme = ExtResource("3_f5s8r")
text = "JOIN LOCAL GAME"

[node name="StatusLabel" type="Label" parent="Control"]
unique_name_in_owner = true
modulate = Color(1, 1, 1, 0.501961)
layout_mode = 0
offset_right = 202.0
offset_bottom = 23.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 24
text = "STATUS: NOT CONNECTED"

[connection signal="pressed" from="Control/ButtonContainer/HostButton" to="." method="_on_host_button_pressed"]
[connection signal="pressed" from="Control/ButtonContainer/JoinButton" to="." method="_on_join_button_pressed"]
[connection signal="pressed" from="Control/ButtonContainer/JoinButtonLocal" to="." method="_on_join_button_local_pressed"]
